--- a/latex/book.tex
+++ b/latex/book.tex
@@ -26,8 +26,8 @@
             
 \usepackage{tabu}
 \usepackage{docmute}
-\title{Generate Lorem Ipsum placeholder text. Select the number of characters, words, sentences or paragraphs, and hit generate!}
-\author{Author; Author; Author; Author; Author}
+\title{Book demo}
+\author{Author #1; Author #2}
 \date{ID - v1.0B UTC: Fri Jan 12 16:16:55 2024 UTC DOI: 10.1000/100}
 \begin{document}
 \maketitle
